--- a/site/public/dashboard/dashAnalistaOtavio.html
+++ b/site/public/dashboard/dashAnalistaOtavio.html
@@ -41,8 +41,9 @@
 
 </head>
 
+<!--  -->
 
-<body id="page-top" onLoad="nomes(), listar_servidor();">
+<body id="page-top" onLoad="nomes(), graficoReal(), buscarServidores();">
     <!-- Page Wrapper -->
     <div id="wrapper">
         <!-- Sidebar -->
@@ -168,7 +169,19 @@
                 <i class="fas fa-eraser fa-sm text-white-50"></i> Limpar Filtros</a>
                
         </div> -->
-
+                        <div class="row">
+                            <div class="header-dash align-items-center justify-content-between">
+                                <!-- <select class="col-xl-7 col-lg-7" name="" id="select_setores"
+                                    onchange="buscarServidores(this.value)">
+                                    <option value="" selected disabled>Setores</option>
+                                </select> -->
+                                <select class="col-xl-7 col-lg-7" name="" id="select_servidores"
+                                    onchange="setDados(this.value)">
+                                    <option value="" selected disabled>Selecionar servidor</option>
+                                </select>
+                            </div>
+                        </div>
+                        <br>
                         <div class="row">
 
                             <!-- Earnings (Monthly) Card Example -->
@@ -220,8 +233,7 @@
                             <!-- Earnings (Monthly) Card Example -->
                             <div class="col-xl-3 col-md-6 mb-4">
                                 <abbr id="abbrDisco" style="text-decoration: none;">
-                                    <div class="card shadow h-100 py-2 pointer"
-                                        id="cardDisco">
+                                    <div class="card shadow h-100 py-2 pointer" id="cardDisco">
                                         <div class="card-body">
                                             <div class="row no-gutters align-items-center">
                                                 <div class="col mr-2">
@@ -276,7 +288,8 @@
                                     <!-- Card Header - Dropdown -->
                                     <div
                                         class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                        <h6 class="m-0 font-weight-bolder text-cold">Dados em tempo real</h6>
+                                        <h6 class="m-0 font-weight-bolder text-cold">Porcentagem de uso dos Componentes
+                                        </h6>
                                     </div>
 
                                     <!-- Card Body -->
@@ -342,7 +355,7 @@
 
 
 
-                        <script>
+                        <!-- <script>
 
                             var fk = sessionStorage.FK_EMPRESA
 
@@ -389,7 +402,7 @@
                                 return false;
                             }
 
-                        </script>
+                        </script> -->
 
 
 
@@ -464,8 +477,8 @@
             <script src="vendor/chart.js/Chart.min.js"></script>
 
             <!-- Page level custom scripts -->
-            <script src="js/demo/chart-area-demo.js"></script>
-            <script src="js/demo/chart-pie-demo.js"></script>
+            <!-- <script src="js/demo/chart-area-demo.js"></script> -->
+            <!-- <script src="js/demo/chart-pie-demo.js"></script> -->
 
 
             <script>
@@ -529,8 +542,195 @@
             </script>
 
 
+            <script>
+
+                var servidorAtual;
+
+                function buscarServidores() {
+
+                    var fk = sessionStorage.FK_EMPRESA
+
+
+                    // Comando a ser realizado no banco de dados
+                    var query = `SELECT id_servidor, nome_servidor FROM eyes_on_server.servidor WHERE fk_empresa = "${fk}";`;
+
+                    // Limpar as options quando trocar de setor
+                    select_servidores.innerHTML = `<option value="" selected disabled>Servidores</option>`;
+
+                    fetch("/otavioRoute/buscarInformacoes", {
+                        method: "POST",
+                        headers: {
+                            "Content-type": "application/json",
+                        },
+                        body: JSON.stringify({
+                            selectServer: query,
+                        }),
+                    })
+                        .then(function (resposta) {
+                            if (resposta.status == 200) {
+                                console.log(`chegou no feach`)
+                                resposta.json().then((json) => {
+                                    // Criamos um vetor para conferir se aquele servidor já foi inserido no HTML
+                                    var servidores = [];
+                                    // Esse for roda todo o json de resposta da query e insere o nome dos setores no select do HTML
+                                    select_servidores.innerHTML = `<option value="">Selecionar Servidor</option>`;
+                                    for (var i = 0; i < json.length; i++) {
+                                        if (!servidores.includes(json[i].nome_servidor)) {
+                                            var id_servidor = json[i].id_servidor;
+                                            var servidor = json[i].nome_servidor;
+
+                                            select_servidores.innerHTML += `<option value="${id_servidor}">${servidor}</option>`;
+
+                                            console.log(`esse é ${id_servidor} e o ${servidor}`)
+
+                                        }
+                                    }
+                                });
+                            } else {
+                                console.log(
+                                    "Erro ao realizar a busca dos servidores <function buscarServidores>"
+                                );
+                                resposta.text().then((texto) => {
+                                    console.log(resposta);
+                                });
+                            }
+                        })
+                        .catch((erro) => {
+                            console.log("Erro ao realizar a busca: " + erro);
+                        });
+                }
+
+
+
+
+                function setDados() {
+                    console.log(select_servidores.options[select_servidores.selectedIndex].text)
+                    servidorAtual = select_servidores.options[select_servidores.selectedIndex].text
+
+
+                    // Comando a ser realizado no banco de dados
+                    var query = `select tipo, servidor from Eyes_On_Server.view_componentes_servidores
+                     where servidor = "${servidorAtual}";`;
+
+                    // Limpar as options quando trocar de setor
+                    // select_servidores.innerHTML = `<option value="" selected disabled>Servidores</option>`;
+
+                    fetch("/otavioRoute/setDados", {
+                        method: "POST",
+                        headers: {
+                            "Content-type": "application/json",
+                        },
+                        body: JSON.stringify({
+                            selectServer: query,
+                        }),
+                    })
+                        .then(function (resposta) {
+                            if (resposta.status == 200) {
+                                console.log(`chegou no feach`)
+                                resposta.json().then((json) => {
+
+                                    for (var i = 0; i < json.length; i++) {
+
+                                        var dados = json[i];
+
+                                        // ifs com esses parametros
+                                        // USO_PORCENTAGEM_CPU
+                                        // USO_MEMORIA_PORCENTAGEM
+                                        // USO_DISCO_PORCENTAGEM
+
+
+                                        // console.log(dados.servidor)
+                                        console.log(dados.Tipo)
+
+                                    }
+                                });
+                            } else {
+                                console.log(
+                                    "Erro ao realizar a busca dos servidores <function buscarServidores>"
+                                );
+                                resposta.text().then((texto) => {
+                                    console.log(resposta);
+                                });
+                            }
+                        })
+                        .catch((erro) => {
+                            console.log("Erro ao realizar a busca: " + erro);
+                        });
+                }
+
+
+
+
+
+            </script>
+
+
+
+
+
+
+            <script>
+
+                function nomes() {
+
+                    var fk = sessionStorage.FK_EMPRESA
+                    nome_do_usuario.innerHTML = sessionStorage.NOME_USER;
+                    nome_da_empresa.innerHTML = sessionStorage.NOME_FANTASIA;
+
+                }
+
+            </script>
+
+
+
+
+
+
             <!-- Grafico de linha em tempo real -->
             <script>
+
+                var fk = sessionStorage.FK_EMPRESA
+
+                function graficoReal() {
+                    fetch("/otavioRoute/grafico", {
+                        method: "POST",
+                        headers: {
+                            "Content-Type": "application/json"
+                        },
+                        body: JSON.stringify({
+                            fkEmpresa_html: fk,
+                        })
+                    }).then(function (resposta) {
+
+                        if (resposta.ok) {
+                            resposta.json().then(json => {
+                                console.log(JSON.stringify(json))
+
+                                for (let i = 0; i < json.length; i++) {
+                                    var dados = json[i]
+
+                                    console.log(dados)
+
+
+
+
+                                    // console.log(`Ta funcionando`)
+                                }
+                            });
+                        } else {
+                            throw ("Houve um erro ao tentar listar os servidores!");
+                        }
+                    }).catch(function (resposta) {
+                        console.log(`#ERRO AO LISTAR: ${resposta}`);
+                    });
+                    return false;
+                }
+
+
+
+
+
+
                 // Seus dados para os conjuntos de dados
                 var cpuData = [10, 30, 50, 70, 40, 20, 60, 80, 90, 45];
                 var memoryData = [30, 50, 90, 40, 60, 70, 80, 10, 55, 20];
