Impressão da correlação

--- a/site/public/dashboard/dashboardProcessos.html
+++ b/site/public/dashboard/dashboardProcessos.html
@@ -300,7 +300,8 @@
                                     <div class="card-body">
                                         <div id="analysis" style="font-size: 14.8px; color: black; display: block;">
                                         </div>
-                                        <div id="correlacao" style="display: none;"></div>
+                                        <div id="correlacao" style="display: none;font-size: 15px; color: black;">
+                                        </div>
                                     </div>
                                 </div>
                             </div>
