mudancas no calculo de regressao linear

--- a/site/public/dashboard/dashboardTemperatura.html
+++ b/site/public/dashboard/dashboardTemperatura.html
@@ -240,6 +240,7 @@
 <script src="vendor/jquery-easing/jquery.easing.min.js" defer></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js" defer></script>
+<script src="https://cdn.jsdelivr.net/npm/regression"></script>
 
 <script type="text/javascript">
 
