tabela com dados da previsao ok

--- a/site/public/dashboard/dashboardPrevisaoQueda.html
+++ b/site/public/dashboard/dashboardPrevisaoQueda.html
@@ -253,17 +253,17 @@
                                 <!-- Card Body -->
                                 <div class="card-body">
                                     <div class="chart-area table-responsive">
-                                        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                                        <table class="table table-bordered" id="dataTableQueda" width="100%" cellspacing="0">
                                             <thead>
                                                 <tr class="text-dark font-weight-bolder">
                                                     <th>Id</th>
                                                     <th>Setor</th>
                                                     <th>Servidor</th>
-                                                    <th>Chance de queda</th>
+                                                    <th>Previsao de queda</th>
                                                    
                                                 </tr>
                                             </thead>
-                                            <tbody id="tabela_queda_servidores" class="text-dark font-weight-bold"></tbody>
+                                            <tbody id="tabela_previsao_queda_servidores" class="text-dark font-weight-bold"></tbody>
                                         </table>
                                     </div>  
                                 </div>
